--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "dialog-message", "dialog-confirm", "dialog-open", "window-create", "shell-open"] }
+tauri = { version = "1", features = [ "fs-exists", "shell-execute", "path-all", "dialog-message", "dialog-confirm", "dialog-open", "window-create"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 sha3 = "0.10.8"
